--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 html, body, #root {
   height: 100%;
-  padding: 0 !;
+  padding: 0 !important;
   background-color: #e2ce8f; /* Your theme gold/tan background */
   font-family: 'Poppins', sans-serif;
 }
